amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-arguments.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-arguments.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-argument-field
  Message: Cannot exist two or more arguments with name 'unit'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-arguments.api.graphql#/declares/shape/Starship
  Property: http://a.ml/vocabularies/shapes#parameter
  Range: [(12,4)-(12,56)]
  Location: 
